--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "dotenv": "^16.0.2",
     "joi": "^17.6.0",
     "jsonwebtoken": "^8.5.1",
+    "lodash": "^4.17.21",
     "ngrok": "^4.3.3",
     "nodemailer": "^6.7.7",
     "passport": "^0.6.0",
@@ -61,6 +62,7 @@
     "@types/cookie-parser": "^1.4.3",
     "@types/express": "^4.17.13",
     "@types/jest": "^28.1.6",
+    "@types/lodash": "^4.14.191",
     "@types/node": "^16.0.0",
     "@types/passport-jwt": "^3.0.6",
     "@types/passport-local": "^1.0.34",
