--- a/package.json
+++ b/package.json
@@ -33,6 +33,8 @@
     "@nestjs/platform-express": "^9.0.0",
     "@nestjs/throttler": "^4.0.0",
     "@nestjs/typeorm": "^9.0.0",
+    "@types/aws-sdk": "^2.7.0",
+    "aws-sdk": "^2.1339.0",
     "bcrypt": "^5.0.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
@@ -51,6 +53,7 @@
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0",
+    "sharp": "^0.31.3",
     "typeorm": "^0.3.7",
     "typeorm-extension": "^2.1.10",
     "uuid": "^8.3.2"
@@ -63,10 +66,12 @@
     "@types/express": "^4.17.13",
     "@types/jest": "^28.1.6",
     "@types/lodash": "^4.14.191",
+    "@types/multer": "^1.4.7",
     "@types/node": "^16.0.0",
     "@types/passport-jwt": "^3.0.6",
     "@types/passport-local": "^1.0.34",
     "@types/pg": "^8.6.6",
+    "@types/sharp": "^0.31.1",
     "@types/supertest": "^2.0.12",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
     "@typescript-eslint/parser": "^5.0.0",
